Added JWT authentication

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -277,6 +277,8 @@ play.filters {
 
     # Defaults to CSRFErrorHandler in the root package.
     #errorHandler = MyCSRFErrorHandler
+    cookie.name = "XSRF-TOKEN"
+    header.name = "X-XSRF-TOKEN"
   }
 
   ## Security headers filter configuration
@@ -376,3 +378,8 @@ db {
 
 # API prefix to be used for all API routes
 apiPrefix = "api"
+
+auth0 {
+  domain = ${?AUTH0_DOMAIN}
+  audience = ${?AUTH0_AUDIENCE}
+}
