--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,5 +27,6 @@ play.filters {
 jwt {
   issuer = "va3aui.com"
   audience = "qso"
+  expiration = 604800  // 7*24*60*60
   secretKey = "XuDwWzw8-Kkqah84NwGEmHwS2uh1vowWGrPryhfMthY"
 }
