--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,7 @@ play.filters {
   disabled += filters.CSRFFilter
 
   hosts {
-    allowed = ["localhost:4200"]
+    allowed = ["localhost:4200", "localhost:9000"]
   }
 
   headers {
@@ -29,4 +29,16 @@ jwt {
   audience = "qso"
   expiration = 604800  // 7*24*60*60
   secretKey = "XuDwWzw8-Kkqah84NwGEmHwS2uh1vowWGrPryhfMthY"
+}
+
+mysql {
+  profile = "slick.jdbc.MySQLProfile$"
+  db {
+    url = "jdbc:mysql://localhost/va3aui?serverTimezone=UTC"
+    driver = "com.mysql.cj.jdbc.Driver"
+    user = "va3aui"
+    password = "P^FpmpC6tUBniU?i"
+    connectionPool = "HikariCP"
+    numThreads = 10
+  }
 }
