--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,13 +32,12 @@ jwt {
 }
 
 mysql {
-  profile = "slick.jdbc.MySQLProfile$"
-  db {
-    url = "jdbc:mysql://localhost/va3aui?serverTimezone=UTC"
-    driver = "com.mysql.cj.jdbc.Driver"
-    user = "va3aui"
-    password = "P^FpmpC6tUBniU?i"
-    connectionPool = "HikariCP"
-    numThreads = 10
-  }
+  driver = "com.mysql.jdbc.Driver"
+  url = "jdbc:mysql://localhost/va3aui?serverTimezone=UTC"
+  user = "va3aui"
+  password = "P^FpmpC6tUBniU?i"
+  connectionPool = "HikariCP"
+  numThreads = 10
+  // profile = "slick.jdbc.MySQLProfile$"
+  logSql = true
 }
