--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,6 +38,6 @@ mysql {
   password = "P^FpmpC6tUBniU?i"
   connectionPool = "HikariCP"
   numThreads = 10
-  // profile = "slick.jdbc.MySQLProfile$"
+  profile = "slick.jdbc.MySQLProfile$"
   logSql = true
 }
