--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,17 +27,23 @@ play.filters {
 jwt {
   issuer = "va3aui.com"
   audience = "qso"
-  expiration = 604800  // 7*24*60*60
+  // expiration = 604800  // 7*24*60*60
+  expiration = 5000
   secretKey = "XuDwWzw8-Kkqah84NwGEmHwS2uh1vowWGrPryhfMthY"
 }
 
-mysql {
-  driver = "com.mysql.jdbc.Driver"
-  url = "jdbc:mysql://localhost/va3aui?serverTimezone=UTC"
-  user = "va3aui"
-  password = "P^FpmpC6tUBniU?i"
-  connectionPool = "HikariCP"
-  numThreads = 10
+slick.dbs.va3aui {
   profile = "slick.jdbc.MySQLProfile$"
-  logSql = true
+  db {
+    driver = "com.mysql.cj.jdbc.Driver"
+    url = "jdbc:mysql://localhost/va3aui?serverTimezone=UTC"
+    user = "va3aui"
+    password = "P^FpmpC6tUBniU?i"
+    numThreads = 10
+  }
+}
+
+play.evolutions.db.va3aui {
+  enabled = true
+  autoApply = true
 }
