--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,32 +26,32 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "angular-font-awesome": "^3.1.2",
     "angular-in-memory-web-api": "^0.8.0",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.10",
+    "bootstrap": "^4.4.1",
+    "core-js": "^2.6.11",
     "font-awesome": "^4.7.0",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
     "ngx-logger": "^3.4.6",
     "popper.js": "^1.16.0",
-    "rxjs": "~6.5.3",
+    "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "^8.3.19",
+    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
