--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,8 +27,7 @@ play.filters {
 jwt {
   issuer = "va3aui.com"
   audience = "qso"
-  // expiration = 604800  // 7*24*60*60
-  expiration = 5000
+  expiration = 604800  // 7*24*60*60
   secretKey = "XuDwWzw8-Kkqah84NwGEmHwS2uh1vowWGrPryhfMthY"
 }
 
