--- a/front-end/package.json
+++ b/front-end/package.json
@@ -58,6 +58,7 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.5.3",
-    "update": "^0.7.4"
+    "update": "^0.7.4",
+    "webdriver-manager": "^12.1.7"
   }
 }
